Se agrega el hero

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,19 @@ html {
     transform-origin: left;
 }
 
+.hero {
+    position: relative;
+}
+
+.hero > div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.66);
+}
+
 @media (max-width: 991px) {
     .nav-desktop__top {
         display: none;
