--- a/public/css/style.css
+++ b/public/css/style.css
@@ -212,6 +212,15 @@ html {
     font-size: 100px;
 }
 
+.footer__link {
+    transition: opacity 0.3s ease;
+}
+
+.footer__link:hover {
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
+}
+
 @media (max-width: 991px) {
     .nav-desktop__top {
         display: none;
